# Cima-Sync

./: .gitignore  LICENSE  README.md  README_EN.md  build-and-check.sh  build-appimage.sh  builder.json  index.html  package.json  sing-apk.sh  taurify.json  vite.config.ts
.github/workflows/: build-macos.yml  ios-build.yml
plugins/tauri-plugin-android-services/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-android-services/android/: build.gradle.kts
plugins/tauri-plugin-android-services/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-android-services/android/src/main/java/me/rodrigoleon/androidservices/: AndroidServicesPlugin.kt  CimaForegroundService.kt
plugins/tauri-plugin-android-services/android/src/main/res/drawable/: ic_notification.xml
plugins/tauri-plugin-android-services/guest-js/: index.ts
plugins/tauri-plugin-android-services/permissions/: default.toml
plugins/tauri-plugin-android-services/permissions/autogenerated/: reference.md
plugins/tauri-plugin-android-services/permissions/autogenerated/commands/: execute-task.toml  request_notifications_permission.toml
plugins/tauri-plugin-android-services/permissions/schemas/: schema.json
plugins/tauri-plugin-android-services/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-wifi-interface/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-wifi-interface/android/: build.gradle.kts
plugins/tauri-plugin-wifi-interface/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-wifi-interface/android/src/main/java/me/rodrigoleon/wifiinterface/: NetworkBindPlugin.kt
plugins/tauri-plugin-wifi-interface/guest-js/: index.ts
plugins/tauri-plugin-wifi-interface/permissions/: default.toml
plugins/tauri-plugin-wifi-interface/permissions/autogenerated/: reference.md
plugins/tauri-plugin-wifi-interface/permissions/autogenerated/commands/: bind-to-wifi.toml  connect_to_network.toml  get-wifi-status.toml  unbind_network.toml
plugins/tauri-plugin-wifi-interface/permissions/schemas/: schema.json
plugins/tauri-plugin-wifi-interface/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
scripts/: build-android.sh  build-ios.sh  build-linux.sh  check-builds-linux.sh  check-builds-windows.sh  install-appImage.sh  uninstall-appImage.sh
src/: App.tsx  i18n.ts  main.tsx  tourConfig.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  crypto.rs  lib.rs  main.rs  network_sync.rs  tray.rs
src-tauri/src/keyring_controller/: crypto.rs  keyring.rs  mod.rs
src-tauri/src/network_controller/: android_wifi.rs  certificate_controller.rs  client_builder.rs  mod.rs  network_sync.rs  pinning.rs
src/assets/icons/: AlertIcon.tsx  AutostartIcon.tsx  BugIcon.tsx  CheckIcon.tsx  CimaSyncLogo.tsx  CoffeeIcon.tsx  EmailIcon.tsx  GithubIcon.tsx  HandStopIcon.tsx  HelpIcon.tsx  LanguageIcon.tsx  LockIcon.tsx  LoginIcon.tsx  NoWifiIcon.tsx  NotificationIcon.tsx  OptionsIcon.tsx  PrivacyIcon.tsx  ProfileIcon.tsx  SessionIcon.tsx  StopIcon.tsx  TrashIcon.tsx  WifiIcon.tsx  XIcon.tsx
src/assets/img/: cima-sync-logo.avif  cima_sync_logo.png.old
src/components/: BugModal.tsx  CertificateAlert.tsx  CimaSyncModeCard.tsx  ConnectionStatusCard.tsx  ContactMe.tsx  DesktopStatusCard.tsx  Input.tsx  LoadingText.tsx  Modal.tsx  Onboarding.tsx  OpenGithub.tsx  ProfileModal.tsx  SettingsMenu.tsx  SplashScreen.css  SplashScreen.tsx  SuccessModal.tsx  Toast.tsx  ToastManager.tsx  TourStep.tsx
src/components/SettingsMenu/: AutoStartConfig.tsx  LanguageSelector.tsx  TourButton.tsx  TourConfig.tsx
src/controller/: DbController.ts  androidWifiAuth.ts  backgroundService.ts  forceWifi.ts
src/css/: App.css  AppAnimations.css  Global.css  TourNavigation.css
src/hooks/: disableContextMenu.ts  loadLocalCredentials.ts  useAppBootstrap.ts  useNetworkStatus.ts  useShowApp.ts  useTourAutoOpen.ts
src/i18n/: en.json  es.json
src/routes/: App.tsx  Initializer.tsx
src/store/: deviceStore.ts  networkStore.ts  sessionStore.ts  uiStore.ts
tui/: app.tsx
tui/components/: script-list.tsx  script-preview.tsx  script-runner.tsx
tui/utils/: scripts.ts
