[package]
name = "cima-sync"
version = "0.1.0"
description = "Autenticación automática para la red WiFi de la Universidad Autónoma de Baja California"
authors = ["Rodrigo Gibran Felix Leon", "Yoyiyoniu 8)"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/Yoyiyoniu/Cima-Sync"
keywords = ["uabc", "wifi", "authentication", "tauri", "rust"]
categories = ["network-programming", "authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cima_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ]  }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.9"
base64 = "0.22"
rand = "0.8"
netwatcher = "0.4.0"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native", "sync-secret-service"] }

# Tauri Plugins
tauri-plugin-sql = { version = "2", features = ["sqlite"], default-features = false }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-autostart = "2"

# Security
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
regex = "1.10"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

