[package]
name = "tauri-plugin-wifi-interface"
version = "0.1.0"
authors = [ "Rodrigo Gibran Felix Leon" ]
description = "Plugin para la interfaz de WiFi en Tauri"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-wifi-interface"

[dependencies]
tauri = { version = "2.11.2" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }
